; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-lua.c_defer_connect.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/obs-scripting/extr_obs-scripting-lua.c_defer_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.script_callback = type { i32 }

@.str = private unnamed_addr constant [8 x i8] c"handler\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"signal\00", align 1
@calldata_signal_callback = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @defer_connect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @defer_connect(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.script_callback*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to %struct.script_callback*
  store %struct.script_callback* %7, %struct.script_callback** %3, align 8
  %8 = load %struct.script_callback*, %struct.script_callback** %3, align 8
  %9 = getelementptr inbounds %struct.script_callback, %struct.script_callback* %8, i32 0, i32 0
  %10 = call i32* @calldata_ptr(i32* %9, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store i32* %10, i32** %4, align 8
  %11 = load %struct.script_callback*, %struct.script_callback** %3, align 8
  %12 = getelementptr inbounds %struct.script_callback, %struct.script_callback* %11, i32 0, i32 0
  %13 = call i8* @calldata_string(i32* %12, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  store i8* %13, i8** %5, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = load i32, i32* @calldata_signal_callback, align 4
  %17 = load %struct.script_callback*, %struct.script_callback** %3, align 8
  %18 = call i32 @signal_handler_connect(i32* %14, i8* %15, i32 %16, %struct.script_callback* %17)
  ret void
}

declare dso_local i32* @calldata_ptr(i32*, i8*) #1

declare dso_local i8* @calldata_string(i32*, i8*) #1

declare dso_local i32 @signal_handler_connect(i32*, i8*, i32, %struct.script_callback*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
